force-app/main/default/objects/Cricket__c/Cricket__c.object-meta.xml
<CustomObject>
    <label>Cricket</label>
    <nameField>
        <displayFormat>CKID-{0000}</displayFormat>
        <label>Cricket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>crickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>