force-app/main/default/objects/Cricket__c/fields/cricket_Name__c.field-meta.xml
<CustomField>
    <fullName>cricket_Name__c</fullName>
    <label>cricket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>