force-app/main/default/objects/Cricket__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <formula>IMAGE( Image_Url__c ,  cricket_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>image</label>
    <type>Text</type>
</CustomField>