force-app/main/default/objects/Cricket__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>